fixed spacing issues

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,15 +13,17 @@ body {
 .left {
   text-align: left;
   justify-content: left;
+  line-height: 0.9;
 }
 
 .right {
   text-align: right;
   justify-content: right;
+  line-height: 0.9;
 }
 
 .center {
-  padding-top: 20px;
+  padding-top: 10px;
 }
 
 .navigation {
